11-Nov-2003 by Matthias Braun
-fixed irclobby view to not crash on refresh button, when connection is broken
-report exceptions in the irclobby view
-fixed serveraddress view to not contain the ok and abort buttons
-make irc lobby change nickname when the player changes it's name

07-Nov-2003 by Matthias Braun
-fixed HOM effect while joining server
-added new poland flag by Bartosz Fenski

06-Nov-2003 by Matthias Braun
-cleanups and imporvements to the IRC Lobby code
-added a callback ability to input lines, when enter is pressed
-removed chat button and make chat happen on return key
-eleminated usage of DoubleLinkList template in PowerupInterface (using
        std::vector now)

05-Nov-2003 by Matthias Braun
-added manpage contributed by Bartosz Fenski <fenio@o2.pl>

25-Oct-2003 by Matthias Braun
-removed support for .til files and converted them to .bmp
-tried to make .pak and .bmp loader endian safe

23-Oct-2003 by Ivo Danihelka
-implemented respawntype="Random" parameter

23-Oct-2003 by Matthias Braun
-make dedicated server start automatic. Only the configuration file is read, no
 need interactively do settings anymore.
-Documented dedicated server settings in README file
-Changed exception class to inherid from std::exception
-fixed signal handler to really shutdown the app

22-Oct-2003 by Ivo Danihelka
-split GameManager to BotGameManager, DedicatedGameManager
 and PlayerGameManager
-bot can be started from command line (-b option)

21-Oct-2003 by Matthias Braun
-fixed the missing unit pictures in build menu

14-Oct-2003 by Matthias Braun
-fixed crash when client disconnects or connection is lost

13-Oct-2003 by Matthias Braun
-fixed wrong const in Surface class
-don't allow copy constructing of surface class
-fixed some views which could still be moved outside the screen

12-Oct-2003 by Matthias Braun
-Fixed a bug in iXY classes.
-Added note about black screen to readme
-fixed bug where MiniMapView was drawing outside it's view space, leading to
 crashes.